# PDF_finder

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Compila.bat  FUNDING.yml  LICENSE  PDF-QT.bat  PDF_Finder.py  PREREQUISITES.md  README.md  SECURITY.md  STRUCT.md  TO_DO.md  USER_GUIDE.md  about.py  build_linux.sh  build_nuitka.ps1  build_win.py  compile_qt_translations.py  compile_translations.py  duplicates.csv  extract_strings.py  help.py  main.py  menu.py  os  pdf_finder_config.json  pdf_utils.py  plan.md  preview_widget.py  pyproject.toml  requirements.txt  settings.json  setup.py  sys  test_app.py  test_cache_manager_fix.py  test_hash_cache.py  test_import.py  test_scan_crash.py  (+8 more)
.data/: pdf_cache.db
.github/: CODEOWNERS
.temp/: pdf_cache.db
app_qt/: about.py  delete.py  drag_drop.py  file_list_widget.py  gest_recent.py  gest_scan.py  help.py  i18n.py  main_window.py  pdf_utils.py  preview_widget.py  recents.py  scanner.py  search_dup.py  sponsor.py  updates.py  utils.py  version.py  view_log.py
app_qt/translations/: pdf_finder_en.qm  pdf_finder_en.ts  pdf_finder_it.qm  pdf_finder_it.ts
app_struct/: about.py  delete.py  drag_drop.py  gest_scan.py  help.py  menu.py  recents.py  search_dup.py  sponsor.py  theme.py  updates.py  version.py
assets/: version_info.txt
config/: config.json  settings.json  updates.json
docs/: CHANGELOG.md  CONTRIBUTING.md  FILE_DELETION_ANALYSIS.md  GUIDA_UTENTE.md  README.md  STRUCT.md  TO_DO.md  USER_GUIDE.md
docs/ENG/: README.md  USER_GUIDE.md
docs/ITA/: GUIDA_UTENTE.md  README.md
images/: version_info.txt
install-scripts/: BUILD_WINDOWS.md  PDF_Finder Setup.txt  build_config.py  build_simple.py  installer.nsi  uninstaller.nsi
installer-script/: build_linux.py  build_linux.sh  installer.nsi  nuitka.config.toml  nuitka_build_win.py  nuitka_config.toml  publish_to_pypi.py  pyproject.toml  setup.py
installer-script/assets/: version_info.txt
lang/: en.json  en.py  it.json  it.py  language_manager.py  translations.py
script/: PDF_viewer.py  UI.py  __init__.py  about.py  cache_manager.py  delete.py  docs.py  drag_drop.py  file_list_widget.py  filter_dialog.py  filters.py  gest_recent.py  gest_scan.py  hash_cache.py  help.py  lang_mgr.py  language_manager.py  logger.py  logging_utils.py  main_window.py  markdown_viewer.py  menu.py  pdf_comparison.py  pdf_utils.py  pre1.py  preview_widget.py  progress_dialog.py  recents.py  scanner.py  search_dup.py  settings.py  settings_dialog.py  simple_lang_manager.py  simple_translations.py  sponsor.py  text_processor.py  toolbar.py  translation.py  translations.py  ui.py  (+4 more)
script/UI/: PDF_viewer.py  __init__.py  about.py  cache_manager.py  help.py  main_window.py  menu.py  progress_dialog.py  settings_dialog.py  sponsor.py  toolbar.py  ui.py  view_log.py
script/config/: updates.json
script/lang/: __init__.py  ar.py  de.py  en.py  es.py  fr.py  he.py  it.py  ja.py  lang_manager.py  pt.py  ru.py  ua.py  zh.py
script/utils/: advanced_scan.py  advanced_scanner.py  delete.py  drag_drop.py  gest_recent.py  gest_scan.py  hash_cache.py  logger.py  pdf_comparator.py  pdf_comparison.py  pdf_utils.py  recents.py  scanner.py  search_dup.py  settings.py  updates.py  utils.py  version.py
tests/: debug_imports.py  debug_logger.py  test_app.py  test_deletion.py  test_docs_dialog.py  test_docs_functionality.py  test_documentation.py  test_filter.py  test_hash_cache.py  test_import.py  test_logger.py  test_logger_direct.py  test_logger_fixed.py  test_minimal.py  test_scanner.py  test_scanner_fix.py  test_scanner_fix_simple.py  test_scanner_minimal.py  test_scanner_simple.py  test_settings.py  test_ui_deletion.py  test_updates.py
utils/: log_viewer.py  logger.py  test_logger.py  traceback.py
