[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-finder"
version = "2.10.0"  # Updated version
maintainers = [
    {name = "Nsfr750", email = "nsfr750@yandex.com"}
]
description = "A powerful PDF duplicate finder and manager with advanced comparison features"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Nsfr750", email = "nsfr750@yandex.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business",
    "Topic :: Utilities",
    "Topic :: Multimedia :: Graphics"
]

dependencies = [
    "PyMuPDF>=1.21.0",
    "PyPDF2>=3.0.0",
    "PyQt6>=6.4.0",
    "Wand>=0.6.10",
    "imagehash>=4.3.1",
    "numpy>=1.24.0",
    "pdf2image>=1.16.3",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "scikit-image>=0.21.0",
    "tqdm>=4.66.0"
]

[project.optional-dependencies]
dev = [
    "black>=23.7.0",
    "flake8>=6.0.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.4.0",
    "types-requests>=2.31.0",
    "types-python-dotenv>=1.0.0"
]

[project.gui-scripts]
pdf-finder = "main:main"

[project.scripts]
pdf-finder-cli = "main:main"

[project.urls]
Homepage = "https://github.com/Nsfr750/PDF_finder"
"Bug Tracker" = "https://github.com/Nsfr750/PDF_finder/issues"
Documentation = "https://github.com/Nsfr750/PDF_finder#readme"
"Source Code" = "https://github.com/Nsfr750/PDF_finder"
"Changelog" = "https://github.com/Nsfr750/PDF_finder/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = { "" = "." }
packages = ["script"]
include-package-data = true

[tool.setuptools.package-data]
"*" = [
    "assets/*",
    "config/*",
    "lang/*",
    "*.md",
    "*.txt"
]
